Refactor the compiler code to fulfill upgrades from Xtext and Eclipse.
close #1136
close #1133
close #1132
close #1137

Signed-off-by: Stéphane Galland <galland@arakhne.org>